# ygodata-jni

./: CMakeLists.txt  LICENSE  README.md
include/ygo/data/jni/: DataUtils.h
src/: DataUtils.c
